--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
+    "react-date-picker": "^7.8.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
     "uuid": "^3.3.3"
