--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.10.2",
     "react-date-picker": "^7.8.2",
     "react-dom": "^16.10.2",
+    "react-numeric-input": "^2.2.3",
     "react-scripts": "3.2.0",
     "uuid": "^3.3.3"
   },
