--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
+    "randomcolor": "^0.5.4",
     "react": "^16.10.2",
     "react-date-picker": "^7.8.2",
     "react-dom": "^16.10.2",
